# MC

./: .clang_complete  .gitignore  CMakeLists.txt  README.md  conanfile.txt  vimtips.txt
include/: CheckersState.hpp  GNUplotter.hpp  Loop.hpp  RandomWalkState.hpp  State.hpp  SubbandState.hpp  constants.hpp  loop.hpp  parser.hpp  spsolver.hpp  state.hpp  utils.hpp
include/checkers/: checkers.hpp
include/plot/: GNUplotter.hpp
include/random_walk/: random_walk.hpp
include/subband/: subband.hpp  subband_utils.hpp
include/utils/: algorithms.hpp  common.hpp  constants.hpp  memory.hpp  numeric.hpp  random.hpp  writer.hpp
include/utils/debug/: macros.hpp
lib/eigen/doc/: CMakeCache.txt  Doxyfile  Doxyfile-unsupported
reads/: LO_phonon.aux  LO_phonon.tex
src/: CheckersState.cpp  Loop.cpp  RandomWalkState.cpp  State.cpp  main.cpp  parser.cpp  spsolver.cpp
src/checkers/: checkers.cpp
src/random_walk/: random_walk.cpp
src/subband/: subband.cpp  subband_scatterers.cpp  subband_spsolver.cpp  subband_state.cpp  subband_utils.cpp
src/utils/: constants.cpp  parser.cpp
test/: a.out  shrdptr_array.cpp  testEigen.cpp  testOO.cpp  test_begin_end.cpp  test_variadic.cpp  testfuncpointer.cpp  testuniqueptrs.cpp  testusing.cpp
test/gnuplottest/: do_plot.gnu  testplot.cpp
